{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 74,
  "lineage": "20d82cbc-e143-ddc2-6cbd-b42ca78ac12d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-04T18:35:34.151-07:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iddotme9a297797/global/firewalls/iddotme-network-http-allow",
            "log_config": [],
            "name": "iddotme-network-http-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/networks/iddotme-network",
            "priority": 1000,
            "project": "iddotme9a297797",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/firewalls/iddotme-network-http-allow",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.iddotme-network",
            "module.project.google_project.project",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.97.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-08-04T18:35:34.425-07:00",
            "id": "projects/iddotme9a297797/global/addresses/iddotme-db-ip-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "iddotme-db-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/networks/iddotme-network",
            "prefix_length": 16,
            "project": "iddotme9a297797",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/addresses/iddotme-db-ip-address"
          },
          "dependencies": [
            "google_compute_network.iddotme-network",
            "module.project.google_project.project",
            "random_id.id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "iddotme-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/iddotme9a297797/global/networks/iddotme-network",
            "mtu": 0,
            "name": "iddotme-network",
            "project": "iddotme9a297797",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/networks/iddotme-network"
          },
          "dependencies": [
            "module.project.google_project.project",
            "random_id.id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-04T18:35:34.928-07:00",
            "id": "projects/iddotme9a297797/regions/us-central1/routers/iddotme-network-router",
            "name": "iddotme-network-router",
            "network": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/networks/iddotme-network",
            "project": "iddotme9a297797",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/regions/us-central1/routers/iddotme-network-router"
          },
          "dependencies": [
            "google_compute_network.iddotme-network",
            "module.project.google_project.project",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "iddotme9a297797/us-central1/iddotme-network-router/iddotme-network-nat",
            "min_ports_per_vm": 0,
            "name": "iddotme-network-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "iddotme9a297797",
            "region": "us-central1",
            "router": "iddotme-network-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.iddotme-network",
            "google_compute_router.default",
            "module.project.google_project.project",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "iddotme-subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-04T18:35:35.706-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/iddotme9a297797/regions/us-central1/subnetworks/iddotme-subnet",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "iddotme-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/networks/iddotme-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "iddotme9a297797",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/regions/us-central1/subnetworks/iddotme-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.iddotme-network",
            "module.project.google_project.project",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/regions/us-central1/instanceGroups/iddotme-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-08-04T19:16:54.855-07:00",
            "enable_cdn": false,
            "fingerprint": "i_J0OYHm5MY=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/healthChecks/iddotme-hc-default"
            ],
            "id": "projects/iddotme9a297797/global/backendServices/iddotme-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "iddotme-backend-default",
            "port_name": "http",
            "project": "iddotme9a297797",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/backendServices/iddotme-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_network.iddotme-network",
            "google_secret_manager_secret.iddotme-secret",
            "google_secret_manager_secret_version.iddotme-secret-version",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.iddotme",
            "module.lb-http.google_compute_health_check.default",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl",
            "module.project.google_project.project",
            "random_id.id",
            "random_password.mysql_root"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-04T19:16:42.810-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iddotme9a297797/global/firewalls/iddotme-hc-0",
            "log_config": [],
            "name": "iddotme-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/networks/iddotme-network",
            "priority": 1000,
            "project": "iddotme9a297797",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/firewalls/iddotme-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "iddotme-network-router",
              "iddotme-subnet"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_network.iddotme-network",
            "google_compute_router.default",
            "google_compute_subnetwork.iddotme-subnetwork",
            "google_secret_manager_secret.iddotme-secret",
            "google_secret_manager_secret_version.iddotme-secret-version",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.iddotme",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl",
            "module.project.google_project.project",
            "random_id.id",
            "random_password.mysql_root"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.49.68.4",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-08-04T18:35:22.609-07:00",
            "id": "projects/iddotme9a297797/global/addresses/iddotme-address",
            "name": "iddotme-address",
            "prefix_length": 0,
            "project": "iddotme9a297797",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/addresses/iddotme-address"
          },
          "dependencies": [
            "module.project.google_project.project",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/iddotme9a297797/global/forwardingRules/iddotme",
            "ip_address": "34.49.68.4",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "iddotme",
            "port_range": "80",
            "project": "iddotme9a297797",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/forwardingRules/iddotme",
            "target": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/targetHttpProxies/iddotme-http-proxy"
          },
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_network.iddotme-network",
            "google_secret_manager_secret.iddotme-secret",
            "google_secret_manager_secret_version.iddotme-secret-version",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.iddotme",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_health_check.default",
            "module.lb-http.google_compute_target_http_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl",
            "module.project.google_project.project",
            "random_id.id",
            "random_password.mysql_root"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-04T19:17:48.974-07:00",
            "id": "projects/iddotme9a297797/global/targetHttpProxies/iddotme-http-proxy",
            "name": "iddotme-http-proxy",
            "project": "iddotme9a297797",
            "proxy_bind": false,
            "proxy_id": 8333278284466718883,
            "self_link": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/targetHttpProxies/iddotme-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/urlMaps/iddotme-url-map"
          },
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_network.iddotme-network",
            "google_secret_manager_secret.iddotme-secret",
            "google_secret_manager_secret_version.iddotme-secret-version",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.iddotme",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_health_check.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl",
            "module.project.google_project.project",
            "random_id.id",
            "random_password.mysql_root"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-04T19:17:37.444-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/backendServices/iddotme-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "__l9esP8oZI=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/iddotme9a297797/global/urlMaps/iddotme-url-map",
            "map_id": 3958369599704893614,
            "name": "iddotme-url-map",
            "path_matcher": [],
            "project": "iddotme9a297797",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iddotme9a297797/global/urlMaps/iddotme-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_network.iddotme-network",
            "google_secret_manager_secret.iddotme-secret",
            "google_secret_manager_secret_version.iddotme-secret-version",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.iddotme",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_health_check.default",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl",
            "module.project.google_project.project",
            "random_id.id",
            "random_password.mysql_root"
          ]
        }
      ]
    }
  ]
}